--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,9 @@ body {
   line-height: 30px;
   color: #343d48;
 }
+img{
+  cursor: auto;
+}
 ul li,
 a,
 button,
@@ -88,7 +91,6 @@ input {
   background-repeat: no-repeat;
   margin: auto;
   padding-top: 25px;
-  min-height: 1000px;
 }
 .header__top {
   display: flex;
@@ -100,6 +102,7 @@ input {
   display: flex;
   align-items: center;
   gap: 30px;
+  width: 350px;
 }
 .menu__list-item--hidden {
   display: none;
@@ -148,6 +151,7 @@ input {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  padding-bottom: 50px;
 }
 .header__content-title {
   font-weight: 700;
@@ -343,6 +347,7 @@ input {
 }
 .slider__feature-tab-btn:focus svg path {
   fill: #0f2137;
+  opacity: 1;
 }
 .pricing {
   margin-bottom: 110px;
